# velonaut

./: #velonaut#  .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  Makefile  README.md  TA_README
_old/: BaseApplication.cpp
cmake/: FindBullet.cmake  FindLibRocket.cmake  FindLua.cmake  FindRakNet.cmake  cotire.cmake
game/: final
game/Darwin/Debug/: Info.plist
game/Darwin/Debug/Frameworks/OgreTerrain.framework/: OgreTerrain.framework
game/Darwin/Debug/Frameworks/Plugin_BSPSceneManager.framework/: Plugin_BSPSceneManager.framework
game/Darwin/Debug/Frameworks/Plugin_CgProgramManager.framework/: Plugin_CgProgramManager.framework
game/Darwin/Debug/Frameworks/Plugin_OctreeZone.framework/: Plugin_OctreeZone.framework
game/Darwin/Debug/Frameworks/Plugin_PCZSceneManager.framework/: Plugin_PCZSceneManager.framework
game/Darwin/Debug/Frameworks/RenderSystem_GL.framework/: RenderSystem_GL.framework
game/Darwin/Debug/Frameworks/RenderSystem_GL3Plus.framework/: RenderSystem_GL3Plus.framework
game/Darwin/Debug/velonaut.app/Contents/: Info.plist
game/Darwin/Release/Frameworks/OgreOverlay.framework/: OgreOverlay.framework
game/Darwin/Release/Frameworks/OgrePaging.framework/: OgrePaging.framework
game/Darwin/Release/Frameworks/OgreRTShaderSystem.framework/: OgreRTShaderSystem.framework
game/Darwin/Release/Frameworks/OgreVolume.framework/: OgreVolume.framework
game/Darwin/Release/Frameworks/Plugin_CgProgramManager.framework/: Plugin_CgProgramManager.framework
game/Darwin/Release/Frameworks/Plugin_OctreeSceneManager.framework/: Plugin_OctreeSceneManager.framework
game/Darwin/Release/Frameworks/RenderSystem_GL.framework/: RenderSystem_GL.framework
game/Darwin/Release/Frameworks/RenderSystem_GL3Plus.framework/: RenderSystem_GL3Plus.framework
game/Linux/Debug/: Plugin_ParticleFX_d.so.1.9.0
game/Linux/Release/: RenderSystem_GL.so.1.9.0
game/data/: config.lua  game.config
game/data/materials/: checkpoint.material  cube.material  finishline.material  forcefield.material  lambert1.material  moonshineskybox.material  orb.material  particle.material  pickup.material  plane.material  ship.material  skybox.material  skybox2.material  starrynightskybox.material  tunnel.material
game/data/meshes/: Envos_Battlecruiserdefault_engine_fire1_NoCull.material  Wraith_Raider_Starship3default2_NoCull.material  checkpoint.mesh  cube.mesh  ship.mesh  sphere.mesh  temp.ma
game/data/objects/: autoplayer.object  cameraman.object  cameratarget.lua  cameratarget.object  checkpoint.object  cube.object  explode.object  finishline.object  forcefield.object  hud.object  initcam.object  mainmenu.object  moonlight.object  ninja.lua  pickup.object  player.lua  player.object  projectile.object  remotePlayer.object  remoteplayer.object  sphere.object  tunnel.object
game/data/particles/: explode.particle  projectile.particle  trail.particle
game/data/scenes/: hello.lua  main.scene
game/data/scripts/: app.lua  camera.lua  cameraman.lua  checkpoint.lua  collider.lua  component.lua  compoundcollider.lua  cube.lua  finishline.lua  hud.lua  light.lua  luatest.lua  mainmenu.lua  math.lua  mathematics.lua  matrix.lua  object.lua  physics.lua  pickup.lua  player.lua  projectile.lua  remoteplayer.lua  renderer.lua  scene.lua  ship.lua  simplecollider.lua  transform.lua  tunnel.lua  utility.lua
game/data/scripts/engine/: app.lua  behavior.lua  bezier.lua  camera.lua  class.lua  color.lua  component.lua  input.lua  light.lua  material.lua  matrix.lua  mesh.lua  meshbuilder.lua  meshrenderer.lua  object.lua  particlerenderer.lua  renderer.lua  rigidbody.lua  scene.lua  transform.lua  utility.lua  vector.lua
game/data/scripts/engine/lib/: matrix.lua  strict.lua
game/data/ui/: demo.rml  hostrace.rcss  hud.rml  ingame.rml  invader.rcss  mainmenu.rcss  mainmenu.rml  settings.rcss  test.rml  window.rml
game/data/ui/css/: btn.rcss  hud.rcss  ingame.rcss  layout.rcss  lobby.rcss  mainmenu.rcss
lib/Darwin/: liblua.dylib
lib/Darwin/lib/Debug/: liblua.dylib
lib/Darwin/lib/Debug/OgreOverlay.framework/: OgreOverlay.framework
lib/Darwin/lib/Debug/OgrePaging.framework/: OgrePaging.framework
lib/Darwin/lib/Debug/OgreProperty.framework/: OgreProperty.framework
lib/Darwin/lib/Debug/OgreRTShaderSystem.framework/: OgreRTShaderSystem.framework
lib/Darwin/lib/Debug/OgreTerrain.framework/: OgreTerrain.framework
lib/Darwin/lib/Debug/OgreVolume.framework/: OgreVolume.framework
lib/Darwin/lib/Debug/Plugin_OctreeSceneManager.framework/: Plugin_OctreeSceneManager.framework
lib/Darwin/lib/Debug/Plugin_ParticleFX.framework/: Plugin_ParticleFX.framework
lib/Linux/include/OGRE/: ExampleFrameListener.h  OgreBuildSettings.h
lib/Linux/include/SDL2/: SDL_config.h
lib/Linux/lib/: libRocketControls.so.1.2.1  libRocketCore.so.1.2.1  libRocketDebugger.so.1.2.1
lib/Linux/lib/Debug/: libOgrePaging_d.so.1.9.0  libOgreProperty_d.so.1.9.0  libOgreVolume_d.so.1.9.0
lib/Linux/lib/Release/: libOgreOverlay.so.1.9.0  libOgrePaging.so.1.9.0  libOgreProperty.so.1.9.0  libOgreRTShaderSystem.so.1.9.0  libOgreTerrain.so.1.9.0  libOgreVolume.so.1.9.0
src/: CMakeLists.txt
src/engine/: BaseApplication.cpp  CMakeLists.txt  app.cpp  app.h  beziertest.cpp  beziertest.h  bullettest.cpp  bullettest.h  bulletwrapper.cpp  bulletwrapper.h  common.h  compoundcollider.cpp  engine.cpp  gametest.cpp  gametest.h  gfx.h  gfxscene.cpp  gfxscene.h  graphics.cpp  graphics.h  graphicstest.cpp  graphicstest.h  input.cpp  input.h  inputlistener.h  inputtest.cpp  inputtest.h  lua_functions.h  luamanager.cpp  luamanager.h  macosx.h  main.cpp  network.cpp  network.h  networkserver.cpp  networkserver.h  ogretest.cpp  ogretest.h  physics.cpp  physics.h  (+11 more)
src/game/: CMakeLists.txt  main.cpp
(+113 files in other folders)
